# limg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: BmpImage.cpp  BmpImage.h  Gfx.h  GifImage.cpp  GifImage.h  Image.cpp  Image.h  Logger.h  LzwDecoder.cpp  LzwDecoder.h  PnmImage.cpp  PnmImage.h  SvgImage.cpp  SvgImage.h  XmlParser.cpp  XmlParser.h  bitmagic.h  main.cpp  misc.h
